# Cpp-WAV-Processor

./: .gitignore  CMakeLists.txt  README.md  README_ES.md  README_es.md  compile_commands.json
include/: Constants.hpp  IIRfilter.h  IIRfilter.hpp  SynthWave.hpp  WavFile.h  WavFile.hpp  WavHeader.h  WavHeader.hpp  main.h  main.hpp
src/: IIRfilter.cpp  SynthWave.cpp  WavFile.cpp  WavHeader.cpp  main.cpp
